--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "astro": "^5.13.7",
     "sharp": "^0.34.3"
+  },
+  "devDependencies": {
+    "@types/node": "^24.5.0"
   }
 }
